# kajota-hub

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  index.html  render.yaml  supervisord.conf
apps/coach-okx/: .env.casper.example  CASPER.md  CSPR_FANS_CAMPAIGN.md  DEMO_SCRIPT.md  DEMO_STORYBOARD.md  OKX_SETUP.md  README.md  SUBMISSION.md  SUBMISSION_OKX.md  asp-manifest.json
apps/coach-okx/kajota_concierge/: __init__.py  agent.py  server.py  witness_client.py  x402_xlayer.py
apps/coach-okx/scripts/: deploy_cep18x402.mjs  package-lock.json  package.json  settle_once.mjs  x402_demo.py
apps/coach-okx/tests/: test_x402_casper.py  test_x402_xlayer.py
apps/concierge/: .gitignore  RUNBOOK.md  VO_CUE_SHEET.md  pyproject.toml
apps/concierge/kajota_concierge/: agent.py  server.py  x402_casper.py
apps/concierge/scripts/: witness_smoke.py  x402_client.mjs  x402_signer_bridge.mjs
apps/judge/: index.html  package.json  server.mjs
apps/keeperhub-escrow/: app.js  index.html  package.json  server.mjs
apps/mesh-okx/: Dockerfile  README.md  SKILL.md  agentfacts.json  pyproject.toml
apps/mesh-okx/kajota_mesh_skill/: main.py  settings.py
apps/mesh-skill/: README.md  SKILL.md  agentfacts.json
apps/mesh-skill/abis/: CosellEscrow.json  CosellRegistry.json
apps/mesh-skill/kajota_mesh_skill/: __init__.py  mesh.py
apps/payflow/: .dockerignore  .gitignore  pyproject.toml
apps/payflow/src/payflow/: __init__.py  cli.py  models.py
apps/payflow/src/payflow/eval/: __init__.py  bench.py  calibration.py  fixture.py  generator.py  metrics.py  runner.py
apps/payflow/src/payflow/ingest/: __init__.py  csv_reader.py  label.py  postgres.py  redact.py  stats.py  to_fixture.py
apps/payflow/src/payflow/integrations/_shared/: __init__.py  extract.py  format.py  observability.py
apps/payflow/src/payflow/integrations/freshdesk/: __init__.py  asgi.py  client.py  config.py  extract.py  format.py  observability.py  webhook.py
apps/payflow/src/payflow/integrations/zendesk/: __init__.py  asgi.py  client.py  config.py  webhook.py
apps/payflow/src/payflow/kb/: __init__.py  core.yaml  finacle.yaml  flexcube.yaml  gtb.yaml  loader.py  postilion.yaml  ubn.yaml
apps/payflow/src/payflow/parser/: __init__.py  audit_trail.py  nibss_json.py  soap.py
apps/payflow/src/payflow/triage/: __init__.py  deterministic.py  gemini.py  llm.py  pipeline.py  prompt.py  verifier.py
apps/slack/: .gitignore  Dockerfile  README.md  pyproject.toml
apps/slack/kajota_concierge/: __init__.py  agent.py  mcp_server.py  mesh.py  seed.py  server.py  slack_app.py  slack_blocks.py  slack_intents.py
apps/slack/kajota_concierge/mesh_abi/: CosellEscrow.json  CosellRegistry.json  ERC20.json
scripts/: vendor.sh
scripts/run/: coach-okx.sh  concierge.sh  judge.sh  keeperhub-escrow.sh  mesh-okx.sh  mesh-skill.sh  payflow-freshdesk.sh  payflow-zendesk.sh  slack.sh  witness.sh
