[project]
name = "kajota-mesh-skill"
version = "0.1.0"
description = "On-chain escrow as a NANDA-discoverable skill. Agents lock USDC on Ethereum Sepolia, release on proof of delivery, and dispute — no key management required."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.30.0",
    "web3>=7.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
]

[project.scripts]
kajota-mesh-skill = "kajota_mesh_skill.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kajota_mesh_skill"]
